Ocene kolokvijum Loznica

--- a/org/colloquium/ocene.org
+++ b/org/colloquium/ocene.org
@@ -60,21 +60,21 @@
 
 * Loznica
 
-  |   |        br. | ime i prezime            | python | clojure | smalltalk | haskell | ukupno |
-  |---+------------+--------------------------+--------+---------+-----------+---------+--------|
-  |   |          1 | Ivan Radosavljević       |    100 |         |           |         | 25.000 |
-  |   |          2 | Ivana Tešanović          |     70 |         |           |         | 17.500 |
-  |   |          3 | Branislav Lukić          |     40 |         |           |         | 10.000 |
-  |   |          4 | Jovan Popović            |     70 |         |           |         | 17.500 |
-  |   |          5 | David Dražić             |    100 |         |           |         | 25.000 |
-  |   |          6 | Marko Purić              |     50 |         |           |         | 12.500 |
-  |   |          7 | Nikola Videkić(sl1/2013) |    100 |         |           |         | 25.000 |
-  |   |          8 | Aleksandra Mitrović      |    100 |         |           |         | 25.000 |
-  |   |          9 | Dejan Jovanović          |     40 |         |           |         | 10.000 |
-  | ^ |     brStud |                          |        |         |           |         |        |
-  |---+------------+--------------------------+--------+---------+-----------+---------+--------|
-  |   |   Prosečno |                          | 74.444 |   0.000 |     0.000 |   0.000 | 18.611 |
-  |   |   Položilo | 0                        |        |         |           |         |        |
-  | ^ |            | polozilo                 |        |         |           |         |        |
-  |   | Prolaznost | 0.000                    |        |         |           |         |        |
+  |   |        br. | ime i prezime       | python | clojure | smalltalk | haskell | ukupno |
+  |---+------------+---------------------+--------+---------+-----------+---------+--------|
+  |   |          1 | Ivan Radosavljević  |    100 |     100 |           |         | 50.000 |
+  |   |          2 | Ivana Tešanović     |     70 |      80 |           |         | 37.500 |
+  |   |          3 | Branislav Lukić     |     40 |      60 |           |         | 25.000 |
+  |   |          4 | Jovan Popović       |     70 |      40 |           |         | 27.500 |
+  |   |          5 | David Dražić        |    100 |     100 |           |         | 50.000 |
+  |   |          6 | Marko Purić         |     50 |      60 |           |         | 27.500 |
+  |   |          7 | Mladen Vidović      |    100 |     100 |           |         | 50.000 |
+  |   |          8 | Aleksandra Mitrović |    100 |     100 |           |         | 50.000 |
+  |   |          9 | Dejan Jovanović     |     40 |      60 |           |         | 25.000 |
+  | ^ |     brStud |                     |        |         |           |         |        |
+  |---+------------+---------------------+--------+---------+-----------+---------+--------|
+  |   |   Prosečno |                     | 74.444 |  77.778 |     0.000 |   0.000 | 38.056 |
+  |   |   Položilo | 0                   |        |         |           |         |        |
+  | ^ |            | polozilo            |        |         |           |         |        |
+  |   | Prolaznost | 0.000               |        |         |           |         |        |
   #+TBLFM: @>>>$3=vcount(map(<if(gt(#1, 55), 1, [])>, @2$8..@10$8))::@>>>>$8=vmean(@2$8..@10$8);%.3f::@>>>>$7=vmean(@2$7..@10$7);%.3f::@>>>>$6=vmean(@2$6..@10$6);%.3f::@>>>>$5=vmean(@2$5..@10$5);%.3f::@>>>>$4=vmean(@2$4..@10$4);%.3f::@>$3=$polozilo/$brStud;%.3f::@2$2..@10$2=@# - 1::@2$8..@10$8=vsum($4..$7)/4;%.3f
