--- a/org/colloquium/ocene.org
+++ b/org/colloquium/ocene.org
@@ -6,53 +6,53 @@
 
   |   |        br. | ime i prezime         | python | clojure | smalltalk | haskell | ukupno |
   |---+------------+-----------------------+--------+---------+-----------+---------+--------|
-  |   |          1 | Aleksandar Novaković  |    100 |         |           |         | 25.000 |
-  |   |          2 | Stefan Kalnak         |    100 |         |           |         | 25.000 |
-  |   |          3 | Sebastijan Stevanović |    100 |         |           |         | 25.000 |
-  |   |          4 | Dušan Borovčanin      |    100 |         |           |         | 25.000 |
-  |   |          5 | Arsenije Vladisavljev |    100 |         |           |         | 25.000 |
-  |   |          6 | Stefan Bratic         |    100 |         |           |         | 25.000 |
-  |   |          7 | Milorad Vojnovic      |    100 |         |           |         | 25.000 |
+  |   |          1 | Aleksandar Novaković  |    100 |     100 |           |         | 50.000 |
+  |   |          2 | Stefan Kalnak         |    100 |     100 |           |         | 50.000 |
+  |   |          3 | Sebastijan Stevanović |    100 |     100 |           |         | 50.000 |
+  |   |          4 | Dušan Borovčanin      |    100 |     100 |           |         | 50.000 |
+  |   |          5 | Arsenije Vladisavljev |    100 |     100 |           |         | 50.000 |
+  |   |          6 | Stefan Bratic         |    100 |     100 |           |         | 50.000 |
+  |   |          7 | Milorad Vojnovic      |    100 |     100 |           |         | 50.000 |
   |   |          8 | Ivan Mihajlov         |     80 |         |           |         | 20.000 |
-  |   |          9 | Predrag Falcic        |    100 |         |           |         | 25.000 |
-  |   |         10 | Nemanja Milosavljevic |     70 |         |           |         | 17.500 |
-  |   |         11 | Predrag Kaljevic      |     90 |         |           |         | 22.500 |
-  |   |         12 | Milos Obradovic       |    100 |         |           |         | 25.000 |
-  |   |         13 | Milos Andric          |        |         |           |         |  0.000 |
-  |   |         14 | Mladen Došlić         |     80 |         |           |         | 20.000 |
-  |   |         15 | Stefan Ristanović     |    100 |         |           |         | 25.000 |
-  |   |         16 | Dragutin Marjanović   |    100 |         |           |         | 25.000 |
-  |   |         17 | Bojan Blagojević      |    100 |         |           |         | 25.000 |
-  |   |         18 | Aleksa Zrnić          |    100 |         |           |         | 25.000 |
-  |   |         19 | Mina Medic            |    100 |         |           |         | 25.000 |
-  |   |         20 | Katarina Preradov     |    100 |         |           |         | 25.000 |
-  |   |         21 | Jovana Micic          |    100 |         |           |         | 25.000 |
-  |   |         22 | Jasna Stanković       |    100 |         |           |         | 25.000 |
-  |   |         23 | Nikola Lukić          |     90 |         |           |         | 22.500 |
-  |   |         24 | Damjan Bećirović      |        |         |           |         |  0.000 |
-  |   |         25 | Nikola Korica         |     70 |         |           |         | 17.500 |
+  |   |          9 | Predrag Falcic        |    100 |      80 |           |         | 45.000 |
+  |   |         10 | Nemanja Milosavljevic |     70 |      80 |           |         | 37.500 |
+  |   |         11 | Predrag Kaljevic      |     90 |      60 |           |         | 37.500 |
+  |   |         12 | Milos Obradovic       |    100 |      80 |           |         | 45.000 |
+  |   |         13 | Milos Andric          |        |      80 |           |         | 20.000 |
+  |   |         14 | Mladen Došlić         |     80 |      60 |           |         | 35.000 |
+  |   |         15 | Stefan Ristanović     |    100 |     100 |           |         | 50.000 |
+  |   |         16 | Dragutin Marjanović   |    100 |     100 |           |         | 50.000 |
+  |   |         17 | Bojan Blagojević      |    100 |     100 |           |         | 50.000 |
+  |   |         18 | Aleksa Zrnić          |    100 |     100 |           |         | 50.000 |
+  |   |         19 | Mina Medic            |    100 |     100 |           |         | 50.000 |
+  |   |         20 | Katarina Preradov     |    100 |     100 |           |         | 50.000 |
+  |   |         21 | Jovana Micic          |    100 |     100 |           |         | 50.000 |
+  |   |         22 | Jasna Stanković       |    100 |     100 |           |         | 50.000 |
+  |   |         23 | Nikola Lukić          |     90 |     100 |           |         | 47.500 |
+  |   |         24 | Damjan Bećirović      |        |      80 |           |         | 20.000 |
+  |   |         25 | Nikola Korica         |     70 |     100 |           |         | 42.500 |
   |   |         26 | Kristina Grujić       |        |         |           |         |  0.000 |
-  |   |         27 | Tamara Varađanin      |     70 |         |           |         | 17.500 |
+  |   |         27 | Tamara Varađanin      |     70 |     100 |           |         | 42.500 |
   |   |         28 | Luka Klačar           |        |         |           |         |  0.000 |
   |   |         29 | Miljana Vinokić       |        |         |           |         |  0.000 |
-  |   |         30 | Ivana Savin           |     90 |         |           |         | 22.500 |
-  |   |         31 | Dunja Krga            |    100 |         |           |         | 25.000 |
-  |   |         32 | Katarina Cerović      |     80 |         |           |         | 20.000 |
+  |   |         30 | Ivana Savin           |     90 |      80 |           |         | 42.500 |
+  |   |         31 | Dunja Krga            |    100 |     100 |           |         | 50.000 |
+  |   |         32 | Katarina Cerović      |     80 |      80 |           |         | 40.000 |
   |   |         33 | Nikola Dakić          |     60 |         |           |         | 15.000 |
-  |   |         34 | Đorđe Marjanović      |    100 |         |           |         | 25.000 |
+  |   |         34 | Đorđe Marjanović      |    100 |     100 |           |         | 50.000 |
   |   |         35 | Aleksandar Rakic      |        |         |           |         |  0.000 |
   |   |         36 | Kristina Pomirisac    |        |         |           |         |  0.000 |
-  |   |         37 | Novica Nikolic        |     80 |         |           |         | 20.000 |
-  |   |         38 | Božo Bjeković         |    100 |         |           |         | 25.000 |
-  |   |         39 | Ana Marojević         |    100 |         |           |         | 25.000 |
-  |   |         40 | Maja Miljić           |    100 |         |           |         | 25.000 |
-  |   |         41 | Stefan Plazić         |     90 |         |           |         | 22.500 |
-  |   |         42 | Nemanja Žunić         |    100 |         |           |         | 25.000 |
+  |   |         37 | Novica Nikolic        |     80 |      60 |           |         | 35.000 |
+  |   |         38 | Božo Bjeković         |    100 |     100 |           |         | 50.000 |
+  |   |         39 | Ana Marojević         |    100 |     100 |           |         | 50.000 |
+  |   |         40 | Maja Miljić           |    100 |     100 |           |         | 50.000 |
+  |   |         41 | Stefan Plazić         |     90 |     100 |           |         | 47.500 |
+  |   |         42 | Nemanja Žunić         |    100 |     100 |           |         | 50.000 |
   |   |         43 | Mladen Stajčić        |        |         |           |         |  0.000 |
   |   |         44 | Miodrag Vilotijević   |        |         |           |         |  0.000 |
   | ^ |     brStud |                       |        |         |           |         |        |
   |---+------------+-----------------------+--------+---------+-----------+---------+--------|
-  |   |   Prosečno |                       | 92.857 |   0.000 |     0.000 |   0.000 | 18.466 |
+  |   |   Prosečno |                       | 92.857 |  92.571 |     0.000 |   0.000 | 36.875 |
   |   |   Položilo | 0                     |        |         |           |         |        |
   | ^ |            | polozilo              |        |         |           |         |        |
   |   | Prolaznost | 0.000                 |        |         |           |         |        |
